# automotive_end_to_end

./: .dockerignore  .gitignore  CMakeLists.txt  COPYRIGHT.md  README.md
.github/workflows/: docker-publish.yml  stale.yml
cloud/colab/: sdv_hpc_cuda.ipynb  sdv_virtual_ecu.ipynb
cloud/docker/: Dockerfile  docker-compose.yml
cloud/kubernetes/: sdv-jobs.yaml
cloud/terraform/aws/: main.tf
cloud/terraform/azure/: main.tf
cloud/terraform/gcp/: main.tf
docs/: 01-overview.html  02-infotainment.html  03-connectivity.html  04-adas.html  05-body-comfort.html  06-powertrain.html  07-chassis-safety.html  08-ee-architecture.html  09-security.html  10-functional.html  11-software.html  12-vehicle-data.html  13-conclusion.html  14-system-architecture.html  15-sequence-flows.html  16-data-control-flow.html  17-behaviour-diagrams.html  18-enterprise-architecture.html  19-doors-requirements.html  20-safety-aspice.html  21-platform-tech.html  22-cloud-hw-guide.html  23-hpc-cuda-colab.html  index.html
docs/assets/: styles.css
include/sdv/: common.hpp  copyright.hpp  health_monitor.hpp  logger.hpp  module_base.hpp  types.hpp
modules/adas/: adas.cpp  adas.hpp
modules/body_comfort/: body_comfort.cpp  body_comfort.hpp
modules/chassis_safety/: chassis_safety.cpp  chassis_safety.hpp
modules/connectivity/: connectivity.cpp  connectivity.hpp
modules/ee_architecture/: ee_architecture.cpp  ee_architecture.hpp
modules/functional/: functional.cpp  functional.hpp
modules/hpc/: hpc.cpp  hpc.hpp  hpc_compute.cpp  hpc_compute.hpp  hpc_internal.hpp  hpc_kernels_cpu.cpp
modules/hpc/cuda/: hpc_cuda_stub.cpp  hpc_kernels.cu
modules/infotainment/: infotainment.cpp  infotainment.hpp
modules/powertrain/: powertrain.cpp  powertrain.hpp
modules/security/: security.cpp  security.hpp
modules/software_platform/: software_platform.cpp  software_platform.hpp
modules/vehicle_data/: vehicle_data.cpp  vehicle_data.hpp
modules/virtual_ecu/: virtual_ecu.cpp  virtual_ecu.hpp
scripts/: install_and_run_all.ps1  install_and_run_all.sh
src/: main.cpp
usecases/: hpc_usecases_runner.cpp  usecases_runner.cpp
